FIXED the overflow thing

--- a/src/App.css
+++ b/src/App.css
@@ -11875,14 +11875,3 @@ html {
 .copyright {
   background-color: #1a252f;
 }
-
-.nav-item {
-  color: #242424;
-}
-.active {
-  color: #ff85a2;
-}
-.stickit{
-
-  width:300px;
-}
